<resources>
    <string name="app_name">Ouiaboo</string>
    <string name="facebook_app_id">254890414845237</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main.titulo_1.ES">Seleccione la página desde donde desea ver anime</string>
    <string name="activity_main.subtitulo.ES">La selección de la página quedará registrada para futuras visitas. En caso de querer cambiar la pagina, puede hacerlo en cualquier
                                                momento mediante las opciones de la aplicacion.</string>
    <string-array name="paginas_anime">
        <item>AnimeFLV</item>
        <item>Reyanime</item>
    </string-array>
    <string-array name="idioma_paginas_anime">
        <item>Español</item>
        <item>Español</item>
    </string-array>
    <string name="drawer_list_uno.paginas_anime.ES">Paginas de anime</string>
    <string name="inicio_drawer_layout">Inicio</string>
    <string name="mas_tarde_drawer_layout">Ver mas tarde</string>
    <string name="favoritos_drawer_layout">Favoritos</string>
    <string name="descargadas_drawer_layout">Descargadas</string>
    <string name="historial_drawer_layout">Historial</string>
    <string name="generos_drawer_layout">Géneros</string>
    <string name="preferencias_drawer_layout">Preferencias</string>
    <string name="compartir_drawer_layout">Compartir la aplicación</string>
    <string name="faq_drawer_layout">FAQ</string>
    <string name="aviso_legal_drawer_layout">Reportar error</string>
    <string name="animeflv_drawer_layout">Usted esta utilizando ANIMEFLV</string>
    <string name="reyanime_drawer_layout">Usted esta utilizando REYANIME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="buscar.menu_central.ES">Buscar</string>
    <string name="drawer_open.menu_central.ES">Abrir navigation drawer</string>
    <string name="drawer_close.menu_central.ES">Cerrar navigation drawer</string>
    <string name="search_hint.menu_central.ES">Buscar anime</string>
    <string name="ins_caracteres.menu_central.ES">Debe ingresar al menos 4 caracteres</string>
    <string name="numero_episodio.menu_central.ES">Episodio</string>
    <string name="ova.menu_central.ES">OVA</string>
    <string name="pelicula.menu_central.ES">Película</string>
    <string name="noResultado.busquedaFLV.ES">No se han encontrado resultados.</string>
    <string name="noti_vermastarde_si">Añadido correctamente para ver mas tarde</string>
    <string name="noti_vermastarde_no">Este capitulo ya se encuentra en ver mas tarde</string>
    <string name="noti_favoritos_si">Añadido correctamente a favoritos</string>
    <string name="noti_favoritos_no">Eliminado de favoritos</string>
    <string name="noti_descargado_actualmente">Este capitulo se esta descargando actualmente</string>
    <string name="noti_descargado_existe">Este capitulo ya se encuentra descargado</string>
    <string name="noExisteAnime.verMasTarde">No existe anime para ver mas tarde</string>
    <string name="animeBorrado.verMasTarde">Eliminado</string>
    <string name="deshacer.verMasTarde">Deshacer</string>
    <string name="noExisten.Favoritos">No hay anime en Favoritos</string>
    <string name="tipo.AnimeInfo">Tipo:</string>
    <string name="estado.AnimeInfo">Estado:</string>
    <string name="genero.AnimeInfo">Géneros:</string>
    <string name="fecha.AnimeInfo">Fecha de inicio:</string>
    <string name="sinopsis.AnimeInfo">Sinopsis</string>
    <string name="episodios.EpisodiosPlusInfo">Episodios</string>
    <string name="informacion.EpisodiosPlusInfo">Información</string>
    <string name="noExisten.Descargados">No hay anime descargado</string>
    <string name="noExisten.Historial">No hay anime en el historial</string>
    <string name="reproductorTitle.Settings">Reproductor</string>
    <string name="reprExterno.Settings">Reproductor externo</string>
    <string name="reprExternoSum.Settings">Si no tienes ninguno, te recomendamos MX Player.</string>
    <string name="actualizacionTitle.Settings">Actualización</string>
    <string name="tipoActuali.Settings">Tipo de actualización</string>
    <string name="tipoActualiEnlaces.Settings">Enlaces externos</string>
    <string name="tipoActualiAuto.Settings">Automático</string>
    <string name="proveedorTitle.Settings">Proveedor</string>
    <string name="proveedor.Settings">Proveedor de anime</string>
    <string name="proveedorAnimeflv.Settings">AnimeFLV</string>
    <string name="proveedorReyanime.Settings">Reyanime</string>
    <string name="actualizandoProveedor.Settings">Actualizando el proveedor</string>
    <string name="masTarde.PopupWindow">Ver mas tarde</string>
    <string name="irAnime.PopupWindow">Ir a anime</string>
    <string name="descargar.PopupWindow">Descargar</string>
    <string name="mensajeDialog.Central">Nueva actualización disponible ¿Desea actualizar?</string>
    <string name="tituloDialog.Central">Actualización</string>
    <string name="aceptarDialog.Central">Aceptar</string>
    <string name="cancelarDialog.Central">Más tarde</string>
    <string name="seccionReproductor.Faq">REPRODUCTOR</string>
    <string name="pregunta1Rep.Faq">No reproducción o mensajes de error</string>
    <string name="respuesta1Rep.Faq">R: Cualquier problema que aparezca relacionado con el reproductor interno (el que viene por defecto), tales como mensajes de error, no reproducción de videos, etc. Se solucionan mediante la utilización del reproductor externo (véase las preferencias de la aplicación, en el menú lateral)</string>
    <string name="pregunta2Rep.Faq">He cambiado al reproductor externo y sigo teniendo errores</string>
    <string name="respuesta2Rep.Faq">R: Eso significa que la página web desde la cual estas reproduciendo los videos se encuentra con problemas</string>
    <string name="pregunta3Rep.Faq">He visto la página y no posee problemas</string>
    <string name="respuesta3Rep.Faq">R: Pues entonces no dudes en reportarnos dicha situación mediante cualquiera de nuestros canales de comunicación disponibles</string>
    <string name="seccionDescargas.Faq">DESCARGAS</string>
    <string name="pregunta1Des.Faq">¿Dónde se encuentran los episodios que descargo?</string>
    <string name="respuesta1Des.Faq">R: Si por algún motivo necesitas conocer la ubicación, estos se encuentran en /Peliculas/Ouiaboo. Desde ya te recomendamos no mover los episodios de esa ubicación, ya que generará problemas en la aplicación</string>
    <string name="pregunta2Des.Faq">Si necesitas borrar un episodio, hazlo mediante la aplicación y no vía la dirección de donde se encuentran descargados</string>
    <string name="pregunta3Des.Faq">He descargado un episodio pero me aparece un mensaje de error en la descarga y ahora no puedo descargar el mismo episodio nuevamente</string>
    <string name="respuesta3Des.Faq">R: Lamentablemente, por el momento, la única solución es borrar los datos de la aplicación (mediante las preferencias de Android, Preferencias --> Aplicaciones --> Ouiaboo --> Borrar datos)</string>
    <string name="pregunta4Des.Faq">La aplicación descarga los episodios en la memoria interna y no en mi tarjeta SD</string>
    <string name="respuesta4Des.Faq">R: Lamentablemente este error es algo complejo de solucionar, ya que este varía según el manufacturador (Samsung, Lg, Sony, etc) y para cada modelo de celular. Se están viendo posibles métodos para solucionar esto</string>
    <string name="seccionGeneral.Faq">GENERAL</string>
    <string name="pregunta1Gen.Faq">No me aparece nada en la pestaña de inicio (u otras)</string>
    <string name="respuesta1Gen.Faq">R: Intenta cargar de nuevo la sección, en caso de no aparecer, entonces es un problema de la página web. Ahora bien, si la página web funciona correctamente y no puedes ver nada, no dudes en reportarnos dicho problema</string>
    <string name="pregunta2Gen.Faq">Al borrar un ítem (video descargado, anime favorito, anime para ver más tarde, anime en historial) este sigue apareciendo</string>
    <string name="respuesta2Gen.Faq">R: Vuelve a intentarlo, hay veces en que por algún motivo (que desconocemos, estamos trabajando en ello) el ítem no se elimina al primer intento</string>
    <string name="pregunta3Gen.Faq">La aplicación se cierra (mensaje de error que ha dejado de funcionar)</string>
    <string name="respuesta3Gen.Faq">R: Vuelve a ejecutar la aplicación, si es reiterado, pues no dudes en notificarnos de tu problema</string>
    <string name="animeflvContent.Descargadas">Debe seleccionar ver anime desde AnimeFLV para ver este contenido</string>
    <string name="reyanimeContent.Descargadas">Debe seleccionar ver anime desde Reyanime para ver este contenido</string>
    <string name="textoInicial.Compartir">Si te gustó la aplicación no dudes en compartirla con tus amigos</string>
    <string name="contentTitleFacebook.Compartir">Aplicación para ver anime online desde tu móvil. Cuenta con una grata interfaz y funcionalidades que facilitarán el proceso de ver tus series favoritas, dejando atrás esos malos momentos que pasaste en páginas llenas de publicidad</string>
    <string name="title1.tutorial">Bienvenido a Ouiaboo</string>
    <string name="info1.tutorial">Antes de empezar, insistimos en que veas lo siguiente</string>
    <string name="title2.tutorial">Caracteristicas</string>
    <string name="info2.tutorial">Manten presionado un item y verás que aparecerán distintas opciones para interactuar con él</string>
    <string name="title3.tutorial">Actualizar</string>
    <string name="info3.tutorial">Si deslizas tu dedo hacia abajo en la pantalla, podrás actualizar la lista de anime diario </string>
    <string name="title4.tutorial">Eliminar</string>
    <string name="info4.tutorial">Puedes eliminar cualquier episodio/anime añadido a la aplicación, sólo basta con deslizar el item hacia la izquierda</string>
    <string name="title5.tutorial">Configuración</string>
    <string name="info5.tutorial">Puedes cambiar el reproductor o la página desde donde ves anime en esta sección</string>
</resources>